# DARIS

./: .gitignore  CMakeLists.txt  build.sh  build_libtorch.sh  cifar10.cpp  cifar10.sh  fgprs.yml  libtorch.yml  lt-source.yml  main.cc  main.cpp  main_smctrl.cpp  prof.sh  run.sh  run2.sh  run_concurrency.sh  run_interference.sh  run_speedup.sh  rundmxnet.sh  speedup.ipynb  test.cpp
.ipynb_checkpoints/: speedup-checkpoint.ipynb
results/: figures.ipynb  wret.csv  wret.cvs  wret1.csv  wret1o.csv  wret2.csv  wret2o.csv  wretl1.csv  wretl1o.csv  wretl2.csv  wretl2o.csv
results/.ipynb_checkpoints/: figures-checkpoint.ipynb
results/batching/: inc.csv  inc448.csv  res.csv  res50.csv  unt.csv
results/batching_old/: inc.csv  res.csv  res50.csv  unt.csv
results/main/inc+/1/1/1/: etH.csv  etL.csv  rtH.csv  rtL.csv  summary.csv  wcetH.csv  wcetL.csv  wretH.csv  wretL.csv
results/main/inc+/1/2/1/: etH.csv  etL.csv  rtH.csv  rtL.csv  summary.csv  wcetH.csv  wcetL.csv  wretH.csv  wretL.csv
results/main/inc+/1/3/1/: etH.csv  etL.csv  rtH.csv  rtL.csv  summary.csv  wcetH.csv  wcetL.csv  wretH.csv  wretL.csv
results/main/inc+/1/4/1/: etH.csv  etL.csv  rtH.csv  rtL.csv  summary.csv  wcetH.csv  wcetL.csv  wretH.csv  wretL.csv
results/main/inc+/1/5/1/: etH.csv  etL.csv  rtH.csv  rtL.csv  summary.csv  wcetH.csv  wcetL.csv  wretH.csv  wretL.csv
results/main/inc+/2/1/1/: etH.csv  etL.csv  rtH.csv  rtL.csv  summary.csv  wcetH.csv  wcetL.csv  wretH.csv  wretL.csv
results/main/inc+/2/1/1.5/: etH.csv  etL.csv  rtH.csv  rtL.csv  summary.csv  wcetH.csv  wcetL.csv  wretH.csv  wretL.csv
results/main/inc+/2/1/2/: etH.csv  etL.csv  rtH.csv  rtL.csv  summary.csv  wcetH.csv  wcetL.csv  wretH.csv  wretL.csv
results/main/inc+/2/2/1/: etH.csv  etL.csv  rtH.csv  rtL.csv  summary.csv  wcetH.csv  wcetL.csv  wretH.csv  wretL.csv
results/main/inc+/2/2/1.5/: etH.csv  etL.csv  rtH.csv  rtL.csv  summary.csv  wcetH.csv  wcetL.csv  wretH.csv  wretL.csv
results/main/inc+/2/2/2/: etH.csv  etL.csv  rtH.csv  rtL.csv  summary.csv  wcetH.csv  wcetL.csv  wretH.csv  wretL.csv
results/main/inc+/2/3/1/: etH.csv  etL.csv  rtH.csv  rtL.csv  summary.csv  wcetH.csv  (+3 more)
results/main/inc+/2/3/1.5/: etH.csv  etL.csv  rtH.csv  rtL.csv  summary.csv  wcetH.csv  wcetL.csv  wretH.csv  wretL.csv
src/: CMakeLists.txt  CUDACachingAllocator.cpp  CUDAContext.cpp  CUDAMallocAsyncAllocator.cpp  CUDAStream.cpp  CUDAStream.h  ctx.cu  ctx.h  schd.cpp  schd.h
src/dat/: cif10.cpp  cif10.hpp
src/figures/: speedup.ipynb
src/figures/.ipynb_checkpoints/: speedup-checkpoint.ipynb
src/net/: CMakeLists.txt  depplab.hpp  inception.cpp  inception.hpp  inceptionA.cpp  inceptionB.cpp  inceptionC.cpp  inceptionD.cpp  inceptionE.cpp  mynet.cpp  mynet.h  resnet.cpp  resnet.h  resnet.hpp  resnet_old.cpp  unet.cpp  unet.hpp  unetConv.hpp
src/net/deeplab/: CMakeLists.txt  deeplab.cpp  deeplab.hpp  deeplab_decoder.cpp  deeplab_decoder.hpp
src/net/deeplab/backbone/: CMakeLists.txt  renset.hpp  resnet.cpp  vgg.cpp  vgg.hpp
src/net/deeplab/backbones/: resnet_encoder.cpp  resnet_encoder.hpp
src/net/deeplab/utils/: CMakeLists.txt  interface.hpp  json.hpp  loss.hpp  readfile.hpp  utils.cpp  utils.hpp
src/scenario/: tests.hpp
src/scenarios/: CMakeLists.txt  batching.cpp  main.cpp  scenario.hpp  tests.hpp
src/sch/: CMakeLists.txt  cnt.cpp  cnt.h  cnt.hpp  container.cpp  container.h  ctx.cpp  ctx.cu  ctx.h  ctx.hpp  ctxd.cpp  ctxd.h  ctxd.hpp  loop.cpp  loop.h  loop.hpp  main.hpp  mod.h  operation.cpp  operation.h  opr.cpp  opr.h  opr.hpp  rec.cpp  rec.hpp  schd.cpp  schd.h  schd.hpp  sqnl.cpp  sqnl.h  sqnl.hpp  str.cpp  str.hpp  trc.cpp  trc.hpp
src/tests/: CMakeLists.txt  concurrency.cpp  interference.cpp  interference.cu  save.cpp  speedup.cpp  speedup.cu  tail.cpp  tail.cu  tests.h  tests.hpp
(+7570 files in other folders)
